--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Two-Factor Authentication, 2FA, Offline Authentication, Local Security Applications, Multi-Factor Authentication, Security Tokens, Encrypted Storage, Self-Hosted Solutions, User-Friendly Backup, Local Network Sync, Open Source Projects">
     <link rel="canonical" href="https://github.com/atxdb/2f" />
     <title>Two-Factor Authentication</title>
   </head>
